# advanced-researcher

./: .dockerignore  .env  .env.example  .gitignore  ADDITIONAL_FIXES.md  CLAUDE.md  Dockerfile  INSTALL.md  LICENSE  Procfile  README.md  SECURITY_UPDATES.md  SECURITY_UPDATE_PLAN.md  build_and_deploy.sh  cloud_build.yaml  debug_asyncio.py  debug_main.py  docker-entrypoint.sh  ingest_local.sh  main.py  package-lock.json  pyproject.toml  requirements.txt  run_local.sh  run_without_directus.sh  runtime.txt  test_import.py
_scripts/: clear_index.py  nginx.conf  supervisord.conf
backend/: auto_learn.py  auto_learn_routes.py  chain.py  dataset_creator.py  dataset_routes.py  deep_research.py  deep_research_integration.py  deep_research_routes.py  domain_detection.py  dynamic_chain.py  dynamic_ingest.py  dynamic_routes.py  feature_detection.py  feature_integration.py  html_to_markdown.py  ingest.py  local_chain.py  local_embeddings.py  local_ingest.py  local_main.py  main.py  verification.py
backend/static/: basic.html  debug.html  index.html  test.html
backend/static/Aa6Z2-lDsQt6XwA5YzSwJ/: _buildManifest.js
backend/static/chunks/: 262-3ac44e6960247799.js  864-f4a36650c73b5fc5.js  main-app-91b84db9219a4b72.js  main-fd6f5f099c84769e.js  webpack-b6f5eb7989d49006.js  webpack-e0493dd8b1a8c5a8.js
backend/static/css/: 8794d08794199149.css
backend/utils/: __init__.py  env.py
docs/: AUTO_LEARNING.md  DATASET_CREATION.md  DEPLOYMENT.md  DYNAMIC_INGEST.md  LOCAL_DEPLOYMENT.md  PORT_CONFIGURATION.md
docs_priv/: CLOUD_RUN.md  DATASET_IMPLEMENTATION_SUMMARY.md  DEEP_RESEARCH.md  DEPLOYMENT_WITH_NEW_FEATURES.md  IMPLEMENTATION_SUMMARY.md  LOCAL_DEPLOYMENT.md  OPEN_DEEP_RESEARCH_INTEGRATION.md
frontend/: .gitignore  middleware.js  next.config.js  package-lock.json  package.json  vercel.json
frontend/app/: page.tsx
terraform/: main.tf
tests/: test_dataset_creation.py  test_dynamic_ingest.py
(+6 files in other folders)
