[tool.poetry]
name = "advanced-researcher"
version = "0.1.1"
description = ""
authors = ["David James <david@othertales.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.25"
langsmith = "^0.3.42"
langchain-community = "^0.3.23"
langchain-openai = "^0.3.16"
langchain-google-genai = "^2.1.4"
langchain-anthropic = "^0.3.12"
langchain-fireworks = "^0.3.0"
langchain-core = "^0.3.59"
langserve = {extras = ["server"], version = "^0.3.1"}
fastapi = "^0.115.12"
pydantic = "^2.11.4"
uvicorn = "^0.34.2"
beautifulsoup4 = "^4.13.4"
weaviate-client = "^3.23.2"
psycopg2 = "^2.9.7"
lxml = "^4.9.3"
voyageai = "^0.1.4"
pillow = "^10.2.0"
tiktoken = "^0.5.2"
cohere = "4.45"
datasets = "^3.6.0"
duckduckgo_search = "^8.0.1"
httpx = "^0.28.1"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
