[tool.poetry]
name = "advanced-researcher"
version = "0.1.1"
description = ""
authors = ["David James <david@othertales.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
beautifulsoup4 = "4.13.4"
datasets = "3.6.0"
duckduckgo_search = "8.0.1"
fastapi = "0.115.12"
httpx = "0.28.1"
langchain = "0.3.25"
langchain-anthropic = "0.3.12"
langchain-cohere = "0.4.4"
langchain-community = "0.3.23"
langchain-core = "0.3.59"
langchain-fireworks = "0.3.0"
langchain-google-genai = "2.1.4"
langchain-openai = "0.3.16"
langserve = "0.3.1"
langsmith = "0.3.42"
open-deep-research = "0.0.15"
pydantic = "2.11.4"
requests = "2.32.3"
uvicorn = "0.34.2"
voyageai = "0.3.2"
weaviate-client = "3.26.2"


[tool.poetry.group.lint.dependencies]
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
